Issue #23349: Fix off-by-one error in PyBuffer_ToContiguous(). Initial patch by Richard Hansen.